# myglico-semantic

./: .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.en.md  README.md  README.pt-br.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260414_0001_initial.py  20260504_0002_clinical_core_uuid.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/services/: uci_importer.py
artifacts/presentations/: 03-myglico-end-to-end-tracking-colab.ipynb
mappings/: myglico-core-r2rml-juma.ttl
ontology/: mygv-dpo-extension.examples.ttl  mygv-dpo-extension.owl.ttl
scripts/: import_uci_dataset.py
